fixing image offset on mobile

--- a/static/assets/scss/general.scss
+++ b/static/assets/scss/general.scss
@@ -447,6 +447,12 @@ body{
 
 @media only screen and (max-width: 750px) {
 
+
+    .personal-info .my-picture .my-image{
+
+        left: 8px;
+        
+    }
     body{
 
         margin: auto !important;
@@ -578,7 +584,7 @@ body{
         }
     }
 
-    
+  
 }
 
 .big {
